# pycoatl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
data/: Image.csv  abaqus_read.py  davis_load.csv  matchid_load.csv  mesh_tens_spline_2d.msh  moose-sim-1_out.e  sim-40_out.e
data/davis_dat/: B0001.csv  B0010.csv
data/matchid_dat/: B0001_0.tif.csv  B0010_0.tif.csv
data/matchid_dat_2024/: Image_0000_0.tiff.csv  Image_0007_0.tiff.csv
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
examples/: datafilter_dev.py  dice_filter_dev.py  dice_filter_test.py  dice_filter_tests.py  differentiation_dev.py  import_simdata_dev.py  tensor_class_dev.py  test_importmatchid_dev.py
examples/ImDef/: input.xml  input_mod.xml  params.xml  subsets copy.txt  subsets.txt  subsets_roi.txt
results/: DICe_solution.e  DICe_solution_0.txt  timing.1.0.txt
src/pycoatl/: __init__.py
src/pycoatl/datafilters/: datafilters.py
src/pycoatl/spatialdata/: importabaqus.py  importansys.py  importdavis.py  importdicedata.py  importmatchid.py  importmoose.py  importmoose_old.py  importsimdata.py  readers.py  spatialdata.py  spatialdata_dev.py  spatialdatawrapper.py  tensorfield.py
src/pycoatl/utils/: JMANPY.py  ansysutils.py  davisutils.py  matchidutils.py
tests/: test_datafilters.py  test_exodusreader.py  test_importabaqus.py  test_importansys.py  test_importdavis.py  test_importmatchid.py  test_importmoose.py  test_importsimdata.py  test_pycoatl.py  test_spatialdata.py  test_visualisations.py
